--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 				</canvas>
 		    </section>
 	    <footer>
-		    Click for fun!
+		    Click for fun! There may be lag...
 	    </footer>
 	</body>
 </html>
